# dotfiles

./: .gitignore  .gitmodules  README.md  XCompose  Xresources  coc-settings.json  dircolors.256dark  direnvrc  done.bash  gitignore  glyph.py  i3.config  install.conf.yaml  mailcap  mypass.py  pre-commit-config.yaml  pyproject.toml  requierments.txt  startup.py  tmux.conf  vale.ini  zshrc
nvim/: coc-settings.json  deoplete.vim  filetype.vim  ginit.vim  init.vim  mini.vim
nvim/colors/: neverness.vim
nvim/ftplugin/: go.vim  yaml.vim
nvim/spell/: en.utf-8.add  en.utf-8.add.spl
zsh/: python_virtual_env.zsh
