# -*- coding: utf-8 -*-

# [tool.poetry]
# name = "usignals"
# version = "0.4.0"
# description = "Python helpers for interacting with Usignals"
# authors = [
#     "Yann Golanski <ygolanski@work=.co.uk>"
# ]
# license = "MIT"
# readme = "README.rst"  # Might not be supported yet? Markdown is.
# homepage = "https://devpi.isotek.co.uk/root/public/usignals"
# repository = "http://bitbucket.isotek.co.uk:7990/projects/CS/repos/usignals/browse"
# documentation = ""
# 
# keywords = [
#     "usignal",
#     "signal",
#     "alarm",
#     "alert",
#     "pyproject.toml"
# ]
# 
# classifiers = [
#     "Topic :: Software Development",
#     "Programming Language :: Python :: 2",
#     "Programming Language :: Python :: 2.7",
#     "Programming Language :: Python :: 3",
#     "Programming Language :: Python :: 3.6",
#     "Programming Language :: Python :: 3.7",
# ]
# include = [
#     "pyproject.toml",
#     "tox.ini",
# ]
# 
# # Set REQUESTS_CA_BUNDLE=/etc/pki/bundle.pem
# # Otherwise you will get an SSL authentication error.
# [[tool.poetry.source]]
# name = "isotek"
# url = "https://devpi.isotek.co.uk/root/public/+simple/"
# 
# [tool.poetry.dependencies]
# python = "^2.7 || ^3.6 ||  ^3.7"
# click-help-colors = "^0.6.0"
# click = "^7.0"
# pymysql = "^0.9.3"
# # nifty-logging-colours = "*"
# 
# coloredlogs = "^10.0"
# future = "^0.18.2"
# verboselogs = "^1.7"
# [tool.poetry.dev-dependencies]
# pydeps = [
#     {version = "^1.9", python = "~2.7 || >=3"}
# ]
# bump2version = [
#     {version = "^0.5", python = "~2.7 || >=3"}
# ]
# safety = [
#     {version = "*", python = "~2.7 || >=3"}
# ]
# pytz = [
#     {version = "*", python = "~2.7 || >=3"}
# ]
# coverage = [
#     {version = "*", python = "~2.7 || >=3"}
# ]
# pytest = [
#     {version = "*", python = "~2.7 || >=3"}
# ]
# sphinx = [
#     #{version = "^1.8", python = "~2.7"},
#     {version = "^2", python = ">=3.5"}
# ]
# ipython = [
#     #{version = "^5", python = "~2.7"},
#     {version = "^7", python = ">=3.5"}
# ]
# pylint = [
#     {version = "^1.4", python = "~2.7"},
#     {version = "^2.4", python = ">=3.5"}
# ]
# docformatter = "^1.3"
# flake8 = "^3.7"
# mock = "^3.0"
# sure = "^1.4"
# tox = "^3.14"
# yapf = "^0.28.0"
# pytest-colordots = "^1.1"
# pytest-runner = "^5.1"
# pytest-xdist = "^1.30"
# black = {version = "^19.3-beta.0", optional = true, allow-prereleases = true, python = ">=3.6"}
# mypy = {version = "^0.740.0", optional = true, allow-prereleases = true, python = ">=3.6"}
# pytest-sugar = "^0.9.2"

[tool.black]
line-length = 79
target_version = ['py27', 'py36', 'py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

# [tool.poetry.scripts]
# # poetry run Sig_to_db --help
# create_alarms = "usignals.create_alarms:main"
# sig_to_db = "usignals.sig_to_db:main"
# sig2db = "usignals.sig2db:cli"
# 
# [scripts]
# create_alarms = "usignals.create_alarms:main"
# sig_to_db = "usignals.sig_to_db:main"
# 
# [build-system]
# # Minimum requirements for the build system to execute.
# requires = ["poetry>=0.12"]
# build-backend = "poetry.masonry.api"
